# pyKalah

./: README.md  pyproject.toml  setup.cfg
pykalah/: bot.py  game.py  main.py  models.py
pykalah/view/: main_window.py
pykalah/view/ui/: ui_main_window.py
pykalah/view/ui/static/: main_window.ui
